--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,14 @@ build:
 requirements:
   host:
     - python {{ python_min }}
-    - hatchling
+    - setuptools >=61
     - pip
+    - cffi >=1.17.1
   run:
     - python >={{ python_min }}
     - cffi >=1.17.1
     - setuptools
     - pytest >=3.8
-    - filelock >=3.12.2
     - rich >=13.8.1
     - importlib-metadata >=8.5.0
 
