--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -15,7 +15,9 @@ source:
 build:
   number: 0
   skip: not linux
-  script: ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  script:
+    - export PYTEST_CODSPEED_FORCE_EXTENSION_BUILD=1
+    - ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   build:
