--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@
 
 [project]
 name = "pytest-codspeed-feedstock"
-version = "3.51.0"  # conda-smithy version used to generate this file
+version = "3.52.0"  # conda-smithy version used to generate this file
 description = "Pixi configuration for conda-forge/pytest-codspeed-feedstock"
 authors = ["@conda-forge/pytest-codspeed"]
 channels = ["conda-forge"]
@@ -49,15 +49,16 @@ description = "Build pytest-codspeed-feedstock with variant linux_64_python3.13.
 [tasks."inspect-linux_64_python3.13.____cp313"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.13.____cp313.yaml"
 description = "List contents of pytest-codspeed-feedstock packages built for variant linux_64_python3.13.____cp313"
-[tasks."build-linux_64_python3.9.____cpython"]
-cmd = "rattler-build build --recipe recipe -m .ci_support/linux_64_python3.9.____cpython.yaml"
-description = "Build pytest-codspeed-feedstock with variant linux_64_python3.9.____cpython directly (without setup scripts)"
-[tasks."inspect-linux_64_python3.9.____cpython"]
-cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.9.____cpython.yaml"
-description = "List contents of pytest-codspeed-feedstock packages built for variant linux_64_python3.9.____cpython"
+[tasks."build-osx_64_"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_64_ directly (without setup scripts)"
+[tasks."inspect-osx_64_"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
+shellcheck = "*"
 [feature.smithy.tasks.build-locally]
 cmd = "python ./build-locally.py"
 description = "Build packages locally using the same setup scripts used in conda-forge's CI"
