--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -17,6 +17,7 @@ source:
 
 build:
   number: 1
+  noarch: ${{ "python" if noarch else "" }}
   skip: (not linux and not noarch) or (noarch and not python_min)
   script:
     content:
