--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -6,6 +6,7 @@ context:
   build: 0
   # build noarch on osx
   noarch: ${{ osx }}
+  noarch_type: ${{ "python" if osx else none }}
 
 package:
   name: ${{ name|lower }}
@@ -17,7 +18,7 @@ source:
 
 build:
   number: 2
-  noarch: ${{ "python" if noarch else none }}
+  noarch: ${{ noarch_type }}
   skip: (not linux and not noarch) or (noarch and not python_min)
   script:
     content:
