--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -6,7 +6,6 @@ context:
   build: 0
   # build noarch on osx
   noarch: ${{ osx }}
-  noarch_type: ${{ "python" if osx else none }}
 
 package:
   name: ${{ name|lower }}
@@ -18,7 +17,7 @@ source:
 
 build:
   number: 2
-  noarch: ${{ noarch_type }}
+  noarch: ${{ "python" if noarch }}
   skip: (not linux and not noarch) or (noarch and not python_min)
   script:
     content:
