Fix Linux build: use empty string instead of none for noarch
When noarch is false (Linux), the conditional evaluates to an empty
string, which rattler-build should interpret as 'no noarch setting'
rather than rejecting 'none' as an invalid value.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -17,7 +17,7 @@ source:
 
 build:
   number: 2
-  noarch: ${{ "python" if noarch }}
+  noarch: ${{ "python" if noarch else "" }}
   skip: (not linux and not noarch) or (noarch and not python_min)
   script:
     content:
