--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,3 +6,6 @@ conda_build:
 conda_forge_output_validation: true
 conda_build_tool: rattler-build
 conda_install_tool: pixi
+build_platform:
+  osx_arm64: osx_64
+test: native_and_emulated
