--- a/pixi.toml
+++ b/pixi.toml
@@ -11,7 +11,7 @@ version = "3.52.3"  # conda-smithy version used to generate this file
 description = "Pixi configuration for conda-forge/pytest-codspeed-feedstock"
 authors = ["@conda-forge/pytest-codspeed"]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
+platforms = ["linux-64", "osx-64", "win-64"]
 
 [dependencies]
 conda-build = ">=24.1"
@@ -61,12 +61,90 @@ description = "Build pytest-codspeed-feedstock with variant osx_64_python3.10.__
 [tasks."inspect-osx_64_python3.10.____cpython"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_python3.10.____cpython.yaml"
 description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_python3.10.____cpython"
+[tasks."build-osx_64_python3.11.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_python3.11.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_64_python3.11.____cpython directly (without setup scripts)"
+[tasks."inspect-osx_64_python3.11.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_python3.11.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_python3.11.____cpython"
+[tasks."build-osx_64_python3.12.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_python3.12.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_64_python3.12.____cpython directly (without setup scripts)"
+[tasks."inspect-osx_64_python3.12.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_python3.12.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_python3.12.____cpython"
+[tasks."build-osx_64_python3.13.____cp313"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_python3.13.____cp313.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_64_python3.13.____cp313 directly (without setup scripts)"
+[tasks."inspect-osx_64_python3.13.____cp313"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_python3.13.____cp313.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_python3.13.____cp313"
+[tasks."build-osx_64_python3.14.____cp314"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_64_python3.14.____cp314.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_64_python3.14.____cp314 directly (without setup scripts)"
+[tasks."inspect-osx_64_python3.14.____cp314"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_64_python3.14.____cp314.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_64_python3.14.____cp314"
 [tasks."build-osx_arm64_python3.10.____cpython"]
 cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_python3.10.____cpython.yaml"
 description = "Build pytest-codspeed-feedstock with variant osx_arm64_python3.10.____cpython directly (without setup scripts)"
 [tasks."inspect-osx_arm64_python3.10.____cpython"]
 cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_python3.10.____cpython.yaml"
 description = "List contents of pytest-codspeed-feedstock packages built for variant osx_arm64_python3.10.____cpython"
+[tasks."build-osx_arm64_python3.11.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_python3.11.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_arm64_python3.11.____cpython directly (without setup scripts)"
+[tasks."inspect-osx_arm64_python3.11.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_python3.11.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_arm64_python3.11.____cpython"
+[tasks."build-osx_arm64_python3.12.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_python3.12.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_arm64_python3.12.____cpython directly (without setup scripts)"
+[tasks."inspect-osx_arm64_python3.12.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_python3.12.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_arm64_python3.12.____cpython"
+[tasks."build-osx_arm64_python3.13.____cp313"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_python3.13.____cp313.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_arm64_python3.13.____cp313 directly (without setup scripts)"
+[tasks."inspect-osx_arm64_python3.13.____cp313"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_python3.13.____cp313.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_arm64_python3.13.____cp313"
+[tasks."build-osx_arm64_python3.14.____cp314"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/osx_arm64_python3.14.____cp314.yaml"
+description = "Build pytest-codspeed-feedstock with variant osx_arm64_python3.14.____cp314 directly (without setup scripts)"
+[tasks."inspect-osx_arm64_python3.14.____cp314"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/osx_arm64_python3.14.____cp314.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant osx_arm64_python3.14.____cp314"
+[tasks."build-win_64_python3.10.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_python3.10.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant win_64_python3.10.____cpython directly (without setup scripts)"
+[tasks."inspect-win_64_python3.10.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_python3.10.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant win_64_python3.10.____cpython"
+[tasks."build-win_64_python3.11.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_python3.11.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant win_64_python3.11.____cpython directly (without setup scripts)"
+[tasks."inspect-win_64_python3.11.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_python3.11.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant win_64_python3.11.____cpython"
+[tasks."build-win_64_python3.12.____cpython"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_python3.12.____cpython.yaml"
+description = "Build pytest-codspeed-feedstock with variant win_64_python3.12.____cpython directly (without setup scripts)"
+[tasks."inspect-win_64_python3.12.____cpython"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_python3.12.____cpython.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant win_64_python3.12.____cpython"
+[tasks."build-win_64_python3.13.____cp313"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_python3.13.____cp313.yaml"
+description = "Build pytest-codspeed-feedstock with variant win_64_python3.13.____cp313 directly (without setup scripts)"
+[tasks."inspect-win_64_python3.13.____cp313"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_python3.13.____cp313.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant win_64_python3.13.____cp313"
+[tasks."build-win_64_python3.14.____cp314"]
+cmd = "rattler-build build --recipe recipe -m .ci_support/win_64_python3.14.____cp314.yaml"
+description = "Build pytest-codspeed-feedstock with variant win_64_python3.14.____cp314 directly (without setup scripts)"
+[tasks."inspect-win_64_python3.14.____cp314"]
+cmd = "inspect_artifacts --recipe-dir recipe -m .ci_support/win_64_python3.14.____cp314.yaml"
+description = "List contents of pytest-codspeed-feedstock packages built for variant win_64_python3.14.____cp314"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
