--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -23,6 +23,11 @@ build:
 
 requirements:
   build:
+    - if: build_platform != target_platform
+      then: 
+        - python
+        - cross-python_${{ target_platform }}
+        - numpy
     - if: linux
       then:
         - ${{ compiler('c') }}
