--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -8,4 +8,4 @@ conda_build_tool: rattler-build
 conda_install_tool: pixi
 build_platform:
   osx_arm64: osx_64
-test: native
+test: native_and_emulated
