fix: try cffi in build too
Add cffi version requirement for Python dependencies.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -27,6 +27,7 @@ requirements:
         - python
         - cross-python_${{ target_platform }}
         - numpy
+        - cffi >=1.17.1
     - if: linux
       then:
         - ${{ compiler('c') }}
