Add osx-arm64 support and remove noarch builds (#20)

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -3,9 +3,6 @@ schema_version: 1
 context:
   name: pytest-codspeed
   version: "4.2.0"
-  build: 0
-  # build noarch on osx
-  noarch: ${{ osx }}
 
 package:
   name: ${{ name|lower }}
@@ -17,45 +14,34 @@ source:
 
 build:
   number: 1
-  skip: (not linux and not noarch) or (noarch and not python_min)
   script:
-    content:
-      - if: noarch
-        then:
-          - export PYTEST_CODSPEED_SKIP_EXTENSION_BUILD=1
-        else:
-          - export PYTEST_CODSPEED_FORCE_EXTENSION_BUILD=1
-      - ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  python:
-    version_independent: ${{ noarch }}
-  variant:
-    # prefer non-noarch, if available
-    down_prioritize_variant: ${{ 1 if noarch else 0 }}
+    - if: linux
+      then:
+        - export PYTEST_CODSPEED_FORCE_EXTENSION_BUILD=1
+    - ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   build:
-    - if: not noarch
+    - if: build_platform != target_platform
+      then: 
+        - python
+        - cross-python_${{ target_platform }}
+        - numpy
+        - cffi >=1.17.1
+    - if: linux
       then:
         - ${{ compiler('c') }}
         - ${{ stdlib('c') }}
   host:
-    - if: noarch
-      then:
-        - python ${{ python_min }}.*
-      else:
-        - python
+    - python
     - setuptools >=61
     - pip
     - cffi >=1.17.1
-    - if: not noarch
+    - if: linux
       then:
         - valgrind >=3.21
   run:
-    - if: noarch
-      then:
-        - python >=${{ python_min }}
-      else:
-        - python
+    - python
     - cffi >=1.17.1
     - setuptools
     - pytest >=3.8
@@ -67,7 +53,7 @@ tests:
       pip_check: true
       imports:
         - pytest_codspeed
-        - if: not noarch
+        - if: linux
           then:
             - pytest_codspeed.instruments.hooks.dist_instrument_hooks
 
